clang/test/BSC/Negative/Method/Union/union_instance_few_arguments/union_instance_few_arguments.cbs
// RUN: %clang_cc1 -verify %s

union SimpleUnion {
  float uf;
  int ui;
  char uc;
};

int union SimpleUnion::getA(union SimpleUnion* this, int a) { // expected-note {{'getA' declared here}}
  return this->ui;
}


int main() {
  union SimpleUnion u = {.ui = 1};
  u.getA(); // expected-error {{too few arguments to function call, single argument 'a' was not specified}}
  return 0;
}
